--- a/templates/author/listAuthors.html.twig
+++ b/templates/author/listAuthors.html.twig
@@ -124,6 +124,38 @@
         </tbody>
       </table>
     {% endif %}
+    <h1>List authors ordred by Name</h1>
+  <table class="table">
+  <tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Email</th>
+    <th>Books</th>
+        <th>Action</th>
+
+  </tr>
+  {% for a in authorsOrdred %}
+    <tr>
+      <td>{{a.id}}</td>
+      <td>{{a.name}}</td>
+      <td>{{a.email}}</td>
+      <td>
+        <ul>
+            {% for b in a.books %}
+            <li>
+              {{b.title}}</li>
+        {% endfor %}
+        </ul>
+          <td>
+        <a class="btn btn-outline-primary" href="{{path('app_author_update',{id:a.id})}}">
+              Update</a>
+      
+          <a class="btn btn-outline-danger" href="{{path('app_author_delete',{id:a.id})}}">Remove</a>
+        </td>
+
+        </tr>
+    {% endfor %}
+  </table>
 
     <div class="text-center btn-add">
       <a class="btn btn-outline-success" href="{{ path('app_author_add') }}">Add Author</a>
